# nuclearData

./: .gitmodules  API.hpp.in  CMakeLists.txt  LICENSE  implementation.hpp.in  nuclearData.hpp.in  subprojects.cmake
API/: AngularDistribution.hpp.in  CMakeLists.txt  CrossSection.hpp.in  EnergySpectrum.hpp.in  Form.hpp.in  Forms.hpp.in  SecondaryAngularDistribution.hpp.in  SecondaryEnergySpectrum.hpp.in
API/Forms/: CMakeLists.txt
API/Forms/src/: Forms.hpp.in  data.hpp.in  find.hpp.in  form.hpp.in  insert.hpp.in  labels.hpp.in
API/Forms/test/: CMakeLists.txt  Forms.test.cpp
docs/: index.md
implementation/: CMakeLists.txt  ParametricAngularDistribution.hpp.in  ParametricEnergySpectrum.hpp.in  ParametricInterpolationCrossSection.hpp.in  PolymorphicAngularDistribution.hpp.in  PolymorphicEnergySpectrum.hpp.in  PolymorphicInterpolationCrossSection.hpp.in  SampleInterpolationAngularDistribution.hpp.in  SampleInterpolationEnergySpectrum.hpp.in  SecondaryEnergySpectrum.hpp.in
implementation/ParametricAngularDistribution/: CMakeLists.txt
implementation/ParametricAngularDistribution/src/: cumulativeProbability.hpp.in  probabilityDensity.hpp.in
implementation/ParametricEnergySpectrum/: CMakeLists.txt
implementation/ParametricEnergySpectrum/src/: cumulativeProbability.hpp.in  probabilityDensity.hpp.in
implementation/ParametricInterpolationCrossSection/: CMakeLists.txt
implementation/ParametricInterpolationCrossSection/src/: ParametricInterpolationCrossSection.hpp.in  value.hpp.in
implementation/ParametricInterpolationCrossSection/test/: CMakeLists.txt  ParametricInterpolationCrossSection.test.cpp  incidentEnergyLowerBound.test.cpp  incidentEnergyUpperBound.test.cpp  value.test.cpp
implementation/PolymorphicAngularDistribution/: CMakeLists.txt
implementation/PolymorphicAngularDistribution/src/: cumulativeProbability.cpp  probabilityDensity.cpp
implementation/PolymorphicEnergySpectrum/: CMakeLists.txt
implementation/PolymorphicEnergySpectrum/src/: cumulativeProbability.cpp  probabilityDensity.cpp
implementation/PolymorphicInterpolationCrossSection/: CMakeLists.txt
implementation/PolymorphicInterpolationCrossSection/src/: PolymorphicInterpolationCrossSection.cpp  value.cpp
implementation/PolymorphicInterpolationCrossSection/test/: CMakeLists.txt  PolymorphicInterpolationCrossSection.test.cpp  incidentEnergyLowerBound.test.cpp  incidentEnergyUpperBound.test.cpp  value.test.cpp
implementation/SampleInterpolationAngularDistribution/: CMakeLists.txt
implementation/SampleInterpolationAngularDistribution/src/: SampleInterpolationAngularDistribution.cpp  angularDistribution.cpp  cumulativeProbability.cpp  probabilityDensity.cpp
implementation/SampleInterpolationEnergySpectrum/: CMakeLists.txt
implementation/SampleInterpolationEnergySpectrum/src/: SampleInterpolationEnergySpectrum.cpp  cumulativeProbability.cpp  energySpectrum.cpp  probabilityDensity.cpp
implementation/SampleInterpolationEnergySpectrum/test/: CMakeLists.txt  SampleInterpolationEnergySpectrum.test.cpp
implementation/SecondaryEnergySpectrum/: CMakeLists.txt
implementation/SecondaryEnergySpectrum/src/: checkIncidentEnergyBounds.cpp  checkOutgoingEnergy.cpp
implementation/SecondaryEnergySpectrum/test/: CMakeLists.txt  SecondaryEnergySpectrum.test.cpp
implementation/src/: MTSummations.cpp
src/: nuclearData.cpp
